fix(pet): restore PetHealthHistoryResponse.from in PetService